unpackaged/main/default/objects/SurveyTaker__c/SurveyTaker__c.object-meta.xml
<CustomObject>
    <label>Survey Taken</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Surveys Taken</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>