unpackaged/main/default/objects/SurveyTaker__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey Taken By Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Surveys Taken</relationshipLabel>
    <relationshipName>SurveyTakers1</relationshipName>
    <type>Lookup</type>
</CustomField>