unpackaged/main/default/objects/SurveyTaker__c/fields/Survey__c.field-meta.xml
<CustomField>
    <fullName>Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey</label>
    <referenceTo>Survey__c</referenceTo>
    <relationshipName>SurveyTakers1</relationshipName>
    <type>Lookup</type>
</CustomField>